# owntracks-duck-tape

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  dist-workspace.toml  docker-compose.yml  justfile
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: +page.svelte  Map.svelte  Trackinfo.svelte  Tracklist.svelte  Tracktitle.svelte  datetime.js  global.css
frontend/src/routes/setup/: +page.svelte
migrations/: 01_initial.sql  02_add_date_index.sql  02_add_owntracks_fields.sql  03_add_user_device.sql  V1__initial.sql  V2__add_owntracks_fields.sql  V3__add_user_device.sql  schema.sql
src/: db.rs  geojson.rs  gpx.rs  http.rs  main.rs  mqtt.rs  owntracks.rs  stats.rs
static/: index.html  setup.html
static/_app/: version.json
static/_app/immutable/assets/: 2.BGLauF5F.css  2.C_ju2atO.css  2.CciT53w_.css  2.DFd-wIuu.css  _page.CMXtjlqD.css  _page.D2X_DBWO.css  _page.DNX7S7NT.css  _page.l5fLcTY6.css  _page.vHey_5e1.css  global.BRFZiz4N.css  public.DMKqTg1V.css
static/_app/immutable/chunks/: 2xMQ0-51.js  4wGLev8c.js  B01J20Qr.js  BCbcSoMx.js  BFmakRyb.js  BObUguZ5.js  Ba1i9eIs.js  Bq-jdWIF.js  BuxE6iMU.js  Bw5Qz3zq.js  C-bGV7iu.js  CC9dK-lx.js  CE3FYyVf.js  CHUIj23N.js  CM_bnDxC.js  ClUZLFeC.js  CnwxsSnn.js  Cr_5D-2G.js  DFrJKGmR.js  DKGy8cBb.js  DOrXoyPb.js  DQpyGdGz.js  DRqT0f69.js  DVHVesBD.js  D_KWk5Nw.js  DlBGfx_Y.js  DmHyOZNG.js  DoB9PtKK.js  DyL6aWqG.js  GiOF1EXp.js  _mtKSvyN.js  bQjU_EIn.js  evOD2HlZ.js  g2tl_W-g.js  i_b28a22.js  vvdhcB6n.js  wkfETuTP.js  xA4brZdU.js
static/_app/immutable/entry/: app.3T2qFg7o.js  app.BYBscxei.js  app.Bj4n_6z2.js  app.BrSnkAPl.js  app.C0MHGCC3.js  app.CobutYc2.js  app.D19K_l9E.js  app.DglxWk_G.js  app.Dl9FGpaG.js  start.5KxRc-ZU.js  start.BLy7jBEF.js  start.BwC1GXOZ.js  start.CCvI2-e_.js  start.CF8FuJPw.js  start.D8KPRt2b.js  start.RR22V76t.js  start.aoUiYlJv.js  start.gmLnPaHP.js
static/_app/immutable/nodes/: 0.7JhhaQ5W.js  0.CutAPFSq.js  0.Df3RUkil.js  0.QfTvee5v.js  0.bsjvJlCg.js  1.BAmc-WSH.js  1.BEMiNOY3.js  1.CA6ka-Qs.js  1.CGAZt6w3.js  1.CGrUAuuD.js  1.DLbF9WGA.js  1.DY05zfHQ.js  1.DicBL1It.js  1.KKUt6uW9.js  2.3fBiSS_-.js  2.B0zTD7Hv.js  2.B7icktdY.js  2.BL57c1VM.js  2.BpygU0wF.js  2.CZoxkmSK.js  2.Cnt1PYIF.js  2.FboNq40C.js  3.D6aOWZDq.js
