[package]
name = "owntracks-duck-tape"
version = "0.3.1"
edition = "2021"
readme = "README.md"
description = "OwnTracks DuckDB Recorder"
repository = "https://github.com/pka/owntracks-duck-tape"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]
license = "AGPL3"

[features]
bundled = ["duckdb/bundled"]

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
dotenvy = "0.15.7"
duckdb = { version = "1.1.1", features = ["r2d2"] }
env_logger = "0.11.6"
gethostname = "1.0.0"
log = "0.4.22"
r2d2 = "0.8.10"
rumqttc = { version = "0.24.0", features = ["url"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
