[package]
name = "owntracks-duck-tape"
version = "0.4.0"
edition = "2021"
readme = "README.md"
description = "OwnTracks DuckDB Recorder"
repository = "https://github.com/pka/owntracks-duck-tape"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]
license = "AGPL3"

[features]
bundled = ["duckdb/bundled"]

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-rust-embed-responder = { version = "2.2.3", default-features = false, features = [
    "base64",
    "support-rust-embed-for-web",
] }
anyhow = "1.0.95"
dotenvy = "0.15.7"
# Workaround for https://github.com/duckdb/duckdb-rs/issues/436
duckdb = { git = "https://github.com/spiceai/duckdb-rs.git", rev = "a2f4f443601f0fc2a2b1919705a9adf74ec493c2", features = [
    "r2d2",
] }
env_logger = "0.11.6"
geo-types = "0.7.15"
geojson = "0.24.1"
gethostname = "1.0.0"
gpx = "0.10.0"
log = "0.4.22"
r2d2 = "0.8.10"
rumqttc = { version = "0.24.0", features = ["url"] }
rust-embed-for-web = "11.2.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
time = "0.3.37"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
